[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/bongocat/bongocat02.png" type="Texture" id=1]
[ext_resource path="res://Assets/bongocat/bongocat01.png" type="Texture" id=2]
[ext_resource path="res://Source/Characters/Enemy/EnemyBongo.gd" type="Script" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 59.1195, 1.14752 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 55.2303, 10 )

[node name="EnemyBongo" type="KinematicBody2D"]
position = Vector2( 1022, 305 )
collision_layer = 4
collision_mask = 2
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 1
speed_scale = 3.0
playing = true

[node name="Area2D" type="Area2D" parent="."]
monitorable = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 50 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, -21.2133 )
rotation = 1.57079

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_BulletTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
